--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,15 +4,6 @@
     android:layout_height="match_parent" >
 
     <Button
-        android:id="@+id/btnBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="33dp"
-        android:background="@drawable/btnback_style" />
-
-    <Button
         android:id="@+id/btnFast"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,33 +11,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="30dp"
         android:background="@drawable/btnfast_style" />
-
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="400.0px"
-        android:layout_height="45.0px"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="68dp"
-        android:gravity="center"
-        android:thumb="@drawable/thumb" />
-
-    <Button
-        android:id="@+id/btnSlow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/seekBar"
-        android:background="@drawable/btnslow_style" />
-
-    <Button
-        android:id="@+id/btnStop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/seekBar"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="31dp"
-        android:background="@drawable/btnstop_style" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
@@ -60,8 +24,7 @@
     <Button
         android:id="@+id/btnShow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btnBack" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/textView1"
@@ -70,5 +33,39 @@
         android:layout_alignBottom="@+id/progressBar1"
         android:layout_toRightOf="@+id/progressBar1"
         android:text="Battery" />
+
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="400.0px"
+        android:layout_height="45.0px"
+        android:layout_below="@+id/btnShow"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:thumb="@drawable/thumb" />
+
+    <Button
+        android:id="@+id/btnSlow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/seekBar"
+        android:layout_marginRight="29dp"
+        android:background="@drawable/btnslow_style" />
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:background="@drawable/btnback_style" />
+
+    <Button
+        android:id="@+id/btnStop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/seekBar"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/btnstop_style" />
 
 </RelativeLayout>
